feat(audio): release text to speech API
