# nas-web/controller/audio.go
@@ -23,3 +23,17 @@ type AudioController struct{}
 func (a AudioController) Transcriptions(ctx *wrapper.Context) {
 	wrapper.ApiWrapper(ctx, service.TranscriptionsHandler, true, &formjson.TranscriptionsReq{}, &wrapper.ApiConfig{ReqType: support.CHECKTYPE_FORM})
 }
+
+// @Summary Generate audio from the input text
+// @Description Generate audio from the input text
+// @Tags Audio
+// @Accept json
+// @Produce octet-stream
+// @Param auth body formjson.SpeechReq true "request data"
+// @Success 200 {file} "response data"
+// @Router /v1/audio/speech [post]
+// @Security ApiKeyAuth
+// @Param Authorization header string true "authentication"
+func (a AudioController) Speech(ctx *wrapper.Context) {
+	wrapper.ApiWrapper(ctx, service.SpeechHandler, true, &formjson.SpeechReq{}, &wrapper.ApiConfig{ReqType: support.CHECKTYPE_JSON})
+}
